--- a/code/dev/parts/domains/domain-image-engine/domain-image-engine.tpl.html
+++ b/code/dev/parts/domains/domain-image-engine/domain-image-engine.tpl.html
@@ -8,7 +8,7 @@
       <toggle-switch name="enableImageEngine" id="enableImageEngine" ng-model="model.image_engine.enable_image_engine" on-label="On"
         off-label="Off">
       </toggle-switch>
-      <label for="enableImageEngine" class="text-info" popover-trigger="mouseenter" uib-popover="This switch controls whether ImageEngine image optimization feature should be enabled for the domain. Once enabled ImageEngine will automatically resize served images depending on the maximum screen resolution of end users' devices.">
+      <label for="enableImageEngine" class="text-info" popover-trigger="mouseenter" uib-popover="This switch controls whether ImageEngine image optimization feature should be enabled for the domain. Once enabled ImageEngine will automatically resize served images depending on the maximum screen resolution of end users' devices. Enabling ImageEngine will automatically enable Custom VCL Code feature.">
         <i class="fa fa-question-circle"></i>
       </label>
     </div>
@@ -22,7 +22,7 @@
       <div class="col-md-9">
         <input id="imageEngineToken" type="text" class="form-control inline-block" ng-disabled="_loading" name="imageEngineToken"
           ng-model="model.image_engine.image_engine_token" placeholder="ImageEngine Token" >
-        <label for="imageEngineToken" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="The token value is required for our ImageEngine feature to properly communicate with the image optimization backend">
+        <label for="imageEngineToken" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Optional ImageEngine token value to be used in communication with ImageEngine secondary cache storage">
                     <i class="fa fa-question-circle"></i>
        </label>
         <div class="error-messages" ng-messages="editForm.imageEngineToken.$error" role="alert" ng-messages-multiple>
@@ -53,7 +53,7 @@
       <div class="col-sm-9">
         <input type="text" validate-origin-server-name-optional class="form-control inline-block" ng-disabled="_loading" ng-model="model.image_engine.image_engine_origin_server"
           id="imageEngineOriginServer" name="imageEngineOriginServer" placeholder="Origin Server Name" ng-maxlength="150">
-        <label for="imageEngineOriginServer" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Optional customer origin server name to be used by the ImageEngine service">
+        <label for="imageEngineOriginServer" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Optional host name of ImageEngine secondary cache storage">
                     <i class="fa fa-question-circle"></i>
                   </label>
         <div class="error-messages" ng-messages="editForm.imageEngineOriginServer.$error" role="alert" ng-messages-multiple>
@@ -71,7 +71,7 @@
           on-label="Yes" off-label="No">
         </toggle-switch>
         <label for="refreshImageEngineConfiguration" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter"
-          uib-popover="TODO text">
+          uib-popover="Use the switch to reset the Custom VCL Code to the default ImageEngine code">
           <i class="fa fa-question-circle"></i>
         </label>
       </div>
