Cosmetic changes on ImageEngine tab

--- a/code/dev/parts/domains/domain-image-engine/domain-image-engine.tpl.html
+++ b/code/dev/parts/domains/domain-image-engine/domain-image-engine.tpl.html
@@ -49,7 +49,7 @@
     </div>
     <!--image_engine_origin_server -->
     <div class="form-group" ng-class="{'has-error': editForm.imageEngineOriginServer.$invalid && editForm.imageEngineOriginServer.$dirty}">
-      <label for="imageEngineOriginServer" class="col-sm-3 control-label">Origin Server</label>
+      <label for="imageEngineOriginServer" class="col-sm-3 control-label">ImageEngine Secondary Cache Storage</label>
       <div class="col-sm-9">
         <input type="text" validate-origin-server-name-optional class="form-control inline-block" ng-disabled="_loading" ng-model="model.image_engine.image_engine_origin_server"
           id="imageEngineOriginServer" name="imageEngineOriginServer" placeholder="Origin Server Name" ng-maxlength="150">
