--- a/code/dev/parts/domains/domain-image-engine/domain-image-engine.tpl.html
+++ b/code/dev/parts/domains/domain-image-engine/domain-image-engine.tpl.html
@@ -6,7 +6,7 @@
     </label>
     <div class="col-md-9">
       <toggle-switch name="enableImageEngine" id="enableImageEngine" ng-model="model.image_engine.enable_image_engine" on-label="On"
-        off-label="Off">
+        off-label="Off" is-disabled="_loading">
       </toggle-switch>
       <label for="enableImageEngine" class="text-info" popover-trigger="mouseenter" uib-popover="This switch controls whether ImageEngine image optimization feature should be enabled for the domain. Once enabled ImageEngine will automatically resize served images depending on the maximum screen resolution of end users' devices. Enabling ImageEngine will automatically enable Custom VCL Code feature.">
         <i class="fa fa-question-circle"></i>
@@ -21,7 +21,7 @@
     </label>
       <div class="col-md-9">
         <input id="imageEngineToken" type="text" class="form-control inline-block" ng-disabled="_loading" name="imageEngineToken"
-          ng-model="model.image_engine.image_engine_token" placeholder="ImageEngine Token" >
+          ng-model="model.image_engine.image_engine_token" placeholder="ImageEngine Token">
         <label for="imageEngineToken" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Optional ImageEngine token value to be used in communication with ImageEngine secondary cache storage">
                     <i class="fa fa-question-circle"></i>
        </label>
@@ -72,6 +72,16 @@
         </toggle-switch>
         <label for="refreshImageEngineConfiguration" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter"
           uib-popover="Use the switch to reset the Custom VCL Code to the default ImageEngine code">
+          <i class="fa fa-question-circle"></i>
+        </label>
+      </div>
+    </div>
+    <div class="form-group " ng-if="model.image_engine.custom_configuration_present">
+      <label class="col-sm-3  control-label"> Note: </label>
+      <div class="col-sm-9 control-label pull-left" style="text-align:left">
+        ImageEngine configuration uses modified Custom VCL Code
+        <label for="refreshImageEngineConfiguration" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter"
+          uib-popover="It is possible to customize ImageEngine logic directly in “Custom VCL Code” section of the domain configuration page. This note appears when we detect that the domain is using customized ImageEngine VCL code. In order to reset the configuration to the default value you can use “Set Default ImageEngine Configuration” switch above">
           <i class="fa fa-question-circle"></i>
         </label>
       </div>
