--- a/code/dev/parts/domains/domain-image-engine/domain-image-engine.tpl.html
+++ b/code/dev/parts/domains/domain-image-engine/domain-image-engine.tpl.html
@@ -1,4 +1,4 @@
-<div class="domain-the-third-party-links form col-sm-12" ng-form="editForm">
+<div class="domain-the-third-party-links form col-sm-12" ng-form="editFormImageEngine">
   <!--ImageEngine-->
   <div class="form-group form-inline">
     <label for="enableImageEngine" class="col-sm-3 control-label">
@@ -6,7 +6,7 @@
     </label>
     <div class="col-md-9">
       <toggle-switch name="enableImageEngine" id="enableImageEngine" ng-model="model.image_engine.enable_image_engine" on-label="On"
-        off-label="Off" is-disabled="_loading">
+        off-label="Off" is-disabled="_loading" ng-change="onEnableImageEngineChanged($event, model.image_engine.enable_image_engine)">
       </toggle-switch>
       <label for="enableImageEngine" class="text-info" popover-trigger="mouseenter" uib-popover="This switch controls whether ImageEngine image optimization feature should be enabled for the domain. Once enabled ImageEngine will automatically resize served images depending on the maximum screen resolution of end users' devices. Enabling ImageEngine will automatically enable Custom VCL Code feature.">
         <i class="fa fa-question-circle"></i>
