--- a/code/dev/parts/domains/edit.html
+++ b/code/dev/parts/domains/edit.html
@@ -15,19 +15,24 @@
               <a ui-sref="^" ng-disabled="_loading" class="btn btn-default">
                 <i class="glyphicon glyphicon-arrow-left"></i>&nbsp; Back To List
               </a>
-              <a href="" ng-show="!isAdvancedMode" ng-click="onChangeModeView()" ng-disabled="_loading" class="btn btn-info">
+              <a href="" ng-show="isAdvancedMode==false || isAdvancedMode=='false' " ng-click="onChangeModeView()" ng-disabled="_loading" class="btn btn-info">
                 <i class="icon-revapm-cogs"></i>&nbsp; Advanced Mode
               </a>
-              <a href="" ng-show="isAdvancedMode" ng-click="onChangeModeView()" ng-disabled="_loading" class="btn btn-info">
+              <a href="" ng-show="isAdvancedMode==true || isAdvancedMode=='true' " ng-click="onChangeModeView()" ng-disabled="_loading" class="btn btn-info">
                 <i class="glyphicon glyphicon-cog"></i>&nbsp; Basic Mode
               </a>
+            </div>
+            <div>
+              <button class="btn btn-primary pull-right" ng-disabled="_loading" uib-tooltip="Refresh" ng-click="refreshPage($event,params.id)">
+                <i class="glyphicon glyphicon-refresh" ng-class="_loading ? 'glyphicon-refresh spin': 'glyphicon-refresh'"></i>
+              </button>
             </div>
           </div>
         </div>
       </div>
       <div class="panel-body">
         <!-- Display data in Advanced Mode-->
-        <div class="form-horizontal" ng-show="isAdvancedMode">
+        <div class="form-horizontal" ng-show="isAdvancedMode==true || isAdvancedMode=='true' ">
           <div name="json" class="col-md-12 domains-advanced-mode-edit" id="json" ng-model="modelAdvance" options="jsoneditor.options" ng-jsoneditor="jsonEditorEvent" style="height: 550px; padding-left: 0;"></div>
           <div class="form-group">
             <label class="col-sm-3 control-label" style="margin-top: 15px;">Current Publishing Status</label>
@@ -50,7 +55,7 @@
             </div>
           </div>
         </div>
-        <form class="form-horizontal domain-edit-form" name="editForm" novalidate ng-show="!isAdvancedMode">
+        <form class="form-horizontal domain-edit-form" name="editForm" novalidate ng-show="isAdvancedMode==false || isAdvancedMode=='false'">
           <!-- Display data in Basic Mode -->
           <uib-tabset active="active">
             <uib-tab index="0" heading="General Settings" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Use the tab to configure general domain settings like name and location of web origin, data transfer timeouts, etc">
@@ -166,7 +171,6 @@
               <div class="form-group" ng-class="{'has-error': editForm.domainAliases.$invalid && editForm.domainAliases.$dirty}">
                 <label for="domainAliases" class="col-sm-3 control-label">Non-Wildcard Domain Aliases</label>
                 <div class="col-sm-9">
-
                   <ui-select id="non-Wildcard-Domain-Aliases" validate-domains-list tagging tagging-label="Add New Domain" multiple tagging-tokens="SPACE|," theme="bootstrap" class="form-control inline-block" ng-disabled="_loading" ng-model="model.domain_aliases" name="domainAliases" id="domain_aliases">
                     <ui-select-match placeholder="Add domains...">{{$item}}</ui-select-match>
                     <ui-select-choices repeat="domain in model.domain_aliases">
@@ -249,7 +253,7 @@
                   </label>
                 </div>
               </div>
-            <!-- RUM Data Collection  -->
+              <!-- RUM Data Collection  -->
               <div class="form-group form-inline">
                 <label for="enable_decompression" class="col-sm-3 control-label">
                   Decompress Objects Fetched <br/>From The Origin
@@ -262,7 +266,6 @@
                   </label>
                 </div>
               </div>
-
               <div class="form-group" ng-class="{ 'has-error': editForm.comment.$invalid &&  editForm.comment.$dirty }">
                 <label for="comment" class="col-sm-3 control-label">Comment</label>
                 <div class="col-md-9">
@@ -315,7 +318,6 @@
                   <div class="form-group" ng-class="{'has-error': editForm.originHealthProbeHTTP_REQUEST.$invalid && editForm.originHealthProbeHTTP_REQUEST.$dirty}">
                     <label for="third-party-integrations" class="col-sm-3 control-label">Origin Monitoring HTTP Request</label>
                     <div class="col-md-9">
-
                       <input id="originMonitoringHTTPrequest" type="text" class="form-control inline-block" ng-disabled="_loading" name="originHealthProbeHTTP_REQUEST" ng-model="model.origin_health_probe.HTTP_REQUEST" placeholder="Text like 'GET / HTTP/1.1' (300 characters max)" ng-maxlength="300" characters required>
                       <label for="third-party-integrations" class="text-info" popover-trigger="mouseenter" uib-popover="This string will be sent to the origin HTTP server after connecting to ports 80 and 443. Default value ‘GET / HTTP/1.1’ will work in majority of cases.">
                         <i class="fa fa-question-circle"></i>
@@ -498,7 +500,6 @@
                         <div class="col-sm-12">
                           <div class="checkbox">
                             <label>
-
                               <input id="predefinedSSLconfigurationProfile" type="radio" class="inline-block" name="isCustomSSL_conf_profile" ng-model="isCustomSSL_conf_profile" ng-value="false"> Predefined SSL Configuration Profile
                               <label for="isCustomSSL_conf_profile" popover-append-to-body="{{true}}" class="text-info" popover-trigger="mouseenter" uib-popover="Select the radio-button to use one of the pre-defined SSL configuration profiles (recommended)">
                                 <i class="fa fa-question-circle"></i>
@@ -508,7 +509,7 @@
                         </div>
                       </div>
                       <div class="form-group form-inline" ng-class="{'has-error': editForm.sslConfProfile.$invalid && editForm.sslConfProfile.$dirty}">
-                        <select class="form-control col-sm-offset-3" ng-disabled="_loading|| (isCustomSSL_conf_profile == true)" ng-model="model.ssl_conf_profile" id="ssl_conf_profile" name="sslConfProfile" ng-options="obj.id as obj.profile_name for obj in SSL_conf_profiles"required>
+                        <select class="form-control col-sm-offset-3" ng-disabled="_loading|| (isCustomSSL_conf_profile == true)" ng-model="model.ssl_conf_profile" id="ssl_conf_profile" name="sslConfProfile" ng-options="obj.id as obj.profile_name for obj in SSL_conf_profiles" required>
                         </select>
                         <div class="error-messages" ng-messages="editForm.sslConfProfile.$error" role="alert" ng-messages-multiple>
                           <div ng-messages-include="parts/shared/error-messages.html"></div>
@@ -570,7 +571,7 @@
               </div>
               <hr>
             </uib-tab>
-             <uib-tab index="7" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="This tab is used to manage Web Application Firewall (WAF) settings for the domain">
+            <uib-tab index="7" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="This tab is used to manage Web Application Firewall (WAF) settings for the domain">
               <!--  “WAF” -->
               <uib-tab-heading>WAF</uib-tab-heading>
               <div class="form-group form-inline">
@@ -616,7 +617,7 @@
             </uib-tab>
             <!-- ImageEngine-->
             <uib-tab index="7" heading="ImageEngine" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="The ImageEngine feature provides a simple, automatic and transparent way to resize served images depending on maximum screen resolution of end user devices">
-              <div ng-include="'parts/domains/domain-image-engine/domain-image-engine.tpl.html'"></div>
+              <div ng-include="'parts/domains/domain-image-engine/domain-image-engine.tpl.html'" class="form-group"></div>
               <hr>
             </uib-tab>
           </uib-tabset>
