Add directive attribute for disable auto reload Web Analiytic graphs

--- a/code/dev/parts/reports/proxy.html
+++ b/code/dev/parts/reports/proxy.html
@@ -33,7 +33,8 @@
                    fl-device="device"
                    fl-browser="browser"
                    fl-country="country"
-                   ng-domain="domain"></div>
+                   ng-domain="domain"
+                   is-auto-reload="false"></div>
             </div>
             <div class="col-lg-6">
               <div proxy-traffic-chart
@@ -41,7 +42,8 @@
                    fl-device="device"
                    fl-browser="browser"
                    fl-country="country"
-                   ng-domain="domain"></div>
+                   ng-domain="domain"
+                   is-auto-reload="false"></div>
             </div>
           </div>
 
@@ -52,7 +54,8 @@
                    fl-device="device"
                    fl-browser="browser"
                    fl-country="country"
-                   ng-domain="domain"></div>
+                   ng-domain="domain"
+                   is-auto-reload="false"></div>
             </div>
             <div class="col-lg-6">
               <div http-status-code-chart
@@ -61,7 +64,8 @@
                    fl-device="device"
                    fl-browser="browser"
                    fl-country="country"
-                   ng-domain="domain"></div>
+                   ng-domain="domain"
+                   is-auto-reload="false"></div>
             </div>
           </div>
 
@@ -72,7 +76,8 @@
                    fl-device="device"
                    fl-browser="browser"
                    fl-country="country"
-                   ng-domain="domain"></div>
+                   ng-domain="domain"
+                   is-auto-reload="false"></div>
             </div>
             <div class="col-lg-6">
               <div hits-cache-chart
@@ -80,7 +85,8 @@
                    fl-device="device"
                    fl-browser="browser"
                    fl-country="country"
-                   ng-domain="domain"></div>
+                   ng-domain="domain"
+                   is-auto-reload="false"></div>
             </div>
           </div>
 
@@ -91,7 +97,8 @@
                    fl-device="device"
                    fl-browser="browser"
                    fl-country="country"
-                   ng-domain="domain"></div>
+                   ng-domain="domain"
+                   is-auto-reload="false"></div>
             </div>
           </div>
 
