--- a/code/dev/parts/reports/fbt.html
+++ b/code/dev/parts/reports/fbt.html
@@ -33,7 +33,8 @@
                    fl-device="device"
                    fl-country="country"
                    fl-browser="browser"
-                   ng-domain="domain"></div>
+                   ng-domain="domain"
+                   is-auto-reload="false"></div>
             </div>
           </div>
 
@@ -45,7 +46,8 @@
                    fl-device="device24"
                    fl-country="country24"
                    fl-browser="browser24"
-                   ng-domain="domain"></div>
+                   ng-domain="domain"
+                   is-auto-reload="false"></div>
             </div>
           </div>
 
@@ -54,7 +56,8 @@
             <div class="col-lg-12">
               <div fbt-heatmap-chart
                    fl-country="countries"
-                   ng-domain="domain"></div>
+                   ng-domain="domain"
+                   is-auto-reload="false"></div>
             </div>
           </div>
 
