--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -68,7 +68,7 @@
 <!--<script type="text/javascript" src="bower_components/PACE/pace.js"></script>-->
 
 <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
-<script type="text/javascript" src="bower_components/datatables/media/js/jquery.dataTables.min.js"></script>
+<script type="text/javascript" src="bower_components/datatables.net/js/jquery.dataTables.min.js"></script>
 <script type="text/javascript" src="bower_components/lodash/lodash.min.js"></script>
 <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="bower_components/jsoneditor/dist/jsoneditor.min.js"></script>
@@ -140,6 +140,7 @@
 <script type="text/javascript" src="bower_components/satellizer/dist/satellizer.js"></script>
 <script type="text/javascript" src="js/heatmaps/highmap.us.js"></script>
 <script type="text/javascript" src="js/heatmaps/highmap.world.js"></script>
+<script type="text/javascript" src="js/datatables.net/date-moment-ext.js"></script>
 
 <!-- <script type="text/javascript" src="widgets/adf-widget-analytics-proxy-traffic/dist/adf-widget-analytics-proxy-traffic.js"></script> -->
 <!-- endbuild -->
