Add new Page ImageEngine Analytics

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -209,6 +209,7 @@
 <script type="text/javascript" src="js/portal/resources/model/users.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/cache.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/stats.factory.js"></script>
+<script type="text/javascript" src="js/portal/resources/model/statsImageEngine.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/statsWAF.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/countries.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/dns_zone_records.factory.js"></script>
@@ -369,6 +370,8 @@
 <script type="text/javascript" src="js/portal/reports/top/slowestFBT.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/top/slowestDownload.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/heatmaps/heatmaps.factory.js"></script>
+<script type="text/javascript" src="js/portal/reports/imageengine-analytics/imageEngineAnalytics.controller.js"></script>
+<script type="text/javascript" src="js/portal/reports/imageengine-analytics/directives/imageengineLinechartBytesSaved.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/controller/reportsProxyTraffic.controller.js"></script>
 <script type="text/javascript" src="js/portal/reports/controller/topReportsTraffic.controller.js"></script>
 <script type="text/javascript" src="js/portal/reports/controller/topObjects.controller.js"></script>
