--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -110,6 +110,9 @@
           <a ui-sref-active="active" ui-sref="index.reports.lm_rtt_heatmaps" class="side-menu-sub-item">
             <i class="sub-menu-icon fa fa-exchange"></i> RTT Heatmaps
           </a>
+          <a ui-sref-active="active" ui-sref="index.reports.imageengine-analytics" class="side-menu-sub-item">
+            <i class="sub-menu-icon fa fa-picture-o" aria-hidden="true"></i> ImageEngine
+          </a>
         </li>
         <!--Security Analytics -->
         <li ui-sref-active-if="{class: 'open-side-menu-item', state: 'index.security'}" , ng-class="{'open-side-menu-item': menuExpanded('index.security'),'active-side-menu-item': $state.includes('index.security')}">
