--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -114,7 +114,9 @@
 <script type="text/javascript" src="bower_components/angular-file-saver/dist/angular-file-saver.bundle.min.js"></script>
 
 <script type="text/javascript" src="bower_components/highlightjs/highlight.pack.js"></script>
+
 <script type="text/javascript" src="bower_components/highcharts/modules/no-data-to-display.src.js"></script>
+<script type="text/javascript" src="bower_components/highcharts/modules/solid-gauge.src.js"></script>
 <script type="text/javascript" src="bower_components/angular-highlightjs/src/angular-highlightjs.js"></script>
 
 <script type="text/javascript" src="bower_components/angular-bootstrap-datetimepicker/src/js/datetimepicker.js"></script>
@@ -346,6 +348,7 @@
 <script type="text/javascript" src="js/portal/reports/filter/mobileTrafficFilters.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/filter/mobileTopObjectsFilters.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/pie-chart/pieChart.directive.js"></script>
+<script type="text/javascript" src="js/portal/reports/solidgauge-chart/solidgaugeChart.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/bar-chart/barChart.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/line-chart/lineChart.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/chart/d3PieChart.directive.js"></script>
