--- a/code/dev/parts/reports/imageengine-analytics.tpl.html
+++ b/code/dev/parts/reports/imageengine-analytics.tpl.html
@@ -27,6 +27,24 @@
           </div>
         </div>
         <div class="panel-body">
+          <!-- TODO: make common filter for both graphs -->
+          <div class="row">
+            <div class="col-md-6">
+              <h3 class="text-left">Bytes Saved</h3>
+              <div>
+                <div class="clearfix" filter-time-periods ng-disabled="!domain" is-loading="_loadingBytesSaved" fl-os="os" fl-country="country"
+                  fl-device="device" fl-browser="browser" ng-filters="filtersBytesSaved" on-filter="reloadDataBytesSaved()"></div>
+                <div style="min-width: 480px; min-height: 350px" solidgauge-chart ng-data="dataImageEngineBytesSaved" ng-chart-options="dataImageEngineBytesSavedChartOptions"></div>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <!--<h3>Bytes Saved By ImageEngine</h3>-->
+              <div imageengine-linechart-bytes-saved fl-os="os" fl-device="device" fl-browser="browser" fl-country="country" ng-domain="domain"
+                is-auto-reload="true"></div>
+            </div>
+
+          </div>
+          <hr>
           <div class="row ">
             <div class="clearfix_ col-md-12" filter-time-periods ng-disabled="_loading ||!domain" is-loading="_loading" fl-os="os" fl-country="country"
               fl-device="device" fl-browser="browser" ng-filters="filters" on-filter="reload()" filters-sets="filters"></div>
@@ -40,32 +58,12 @@
               </div>
             </div>
             <div class="col-md-6">
-              <!--TODO: make graph -->
               <h3 class="text-left">Image Resolution Changes</h3>
               <div>
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="dataImageEngineResolutionChanges"></div>
               </div>
             </div>
           </div>
-          <hr>
-
-          <div class="row">
-            <div class="col-md-6">
-              <!--<h3>Bytes Saved By ImageEngine</h3>-->
-              <div imageengine-linechart-bytes-saved fl-os="os" fl-device="device" fl-browser="browser" fl-country="country" ng-domain="domain"
-                is-auto-reload="false"></div>
-            </div>
-
-            <div class="col-md-6">
-              <h3 class="text-left">Bytes Saved</h3>
-              <div>
-                <div class="clearfix" filter-time-periods ng-disabled="!domain" is-loading="_loadingBytesSaved" fl-os="os" fl-country="country"
-                  fl-device="device" fl-browser="browser" ng-filters="filtersBytesSaved" on-filter="reloadDataBytesSaved()"></div>
-                <div style="min-width: 480px; min-height: 350px" solidgauge-chart ng-data="dataImageEngineBytesSaved" ng-chart-options="dataImageEngineBytesSavedChartOptions"></div>
-              </div>
-            </div>
-          </div>
-
         </div>
       </div>
     </div>
