Disable all calls to top_lists with date range 30 days ago

--- a/code/dev/parts/reports/fbt.html
+++ b/code/dev/parts/reports/fbt.html
@@ -28,6 +28,7 @@
 
           <div class="row">
             <div class="col-lg-12">
+              <!-- NOTE: this graph use time filter 1/7/30 days, but now filter params contain data only for last hour  -->
               <div fbt-average-chart
                    fl-os="os"
                    fl-device="device"
@@ -54,6 +55,7 @@
           <hr>
           <div class="row">
             <div class="col-lg-12">
+              <!-- NOTE: this graph use time filter 1/7/30 days, but now filter params contain data only for last hour  -->
               <div fbt-heatmap-chart
                    fl-country="countries"
                    ng-domain="domain"
