--- a/code/dev/parts/reports/proxy.html
+++ b/code/dev/parts/reports/proxy.html
@@ -34,7 +34,7 @@
                    fl-browser="browser"
                    fl-country="country"
                    ng-domain="domain"
-                   is-auto-reload="false"></div>
+                   is-auto-reload="true"></div>
             </div>
             <div class="col-lg-6">
               <div proxy-traffic-chart
@@ -43,7 +43,7 @@
                    fl-browser="browser"
                    fl-country="country"
                    ng-domain="domain"
-                   is-auto-reload="false"></div>
+                   is-auto-reload="true"></div>
             </div>
           </div>
 
@@ -55,7 +55,7 @@
                    fl-browser="browser"
                    fl-country="country"
                    ng-domain="domain"
-                   is-auto-reload="false"></div>
+                   is-auto-reload="true"></div>
             </div>
             <div class="col-lg-6">
               <div http-status-code-chart
@@ -65,7 +65,7 @@
                    fl-browser="browser"
                    fl-country="country"
                    ng-domain="domain"
-                   is-auto-reload="false"></div>
+                   is-auto-reload="true"></div>
             </div>
           </div>
 
@@ -77,7 +77,7 @@
                    fl-browser="browser"
                    fl-country="country"
                    ng-domain="domain"
-                   is-auto-reload="false"></div>
+                   is-auto-reload="true"></div>
             </div>
             <div class="col-lg-6">
               <div hits-cache-chart
@@ -86,7 +86,7 @@
                    fl-browser="browser"
                    fl-country="country"
                    ng-domain="domain"
-                   is-auto-reload="false"></div>
+                   is-auto-reload="true"></div>
             </div>
           </div>
 
@@ -98,7 +98,7 @@
                    fl-browser="browser"
                    fl-country="country"
                    ng-domain="domain"
-                   is-auto-reload="false"></div>
+                   is-auto-reload="true"></div>
             </div>
           </div>
 
