--- a/code/dev/parts/dashboard/widgets/web-analytics/widget-title-with-params-hours.tpl.html
+++ b/code/dev/parts/dashboard/widgets/web-analytics/widget-title-with-params-hours.tpl.html
@@ -2,7 +2,7 @@
   <span ng-if="!!definition.config.domain">
       (<strong>{{definition.config.domain.domain_name}}</strong>)
   </span>
- <span class=pull-right>
+  <span class=pull-right>
 <a href title="reload widget content" ng-if=widget.reload ng-click=reload()>
 <i class="glyphicon glyphicon-refresh"></i>
 </a>
@@ -22,11 +22,11 @@
         </a>
        </span>
 </h3>
-<small ng-if="definition.config.filters.delay" >
+<small ng-if="definition.config.filters.delay">
   Last {{definition.config.filters.delay}} <span ng-if="definition.config.filters.delay=='1'">Hour</span> <span ng-if="definition.config.filters.delay!=='1'">Hours</span>
 </small>
 <small ng-if="!!definition.config.filters.country && definition.config.filters.country!=='-'">&nbsp;Country: {{definition.config.info.country}}&nbsp;</small>
-<span class="widget_filters_info" ng-show="!!definition.config.filters[index.key]" ng-repeat="index in [{key:'os',title:'OS'}, {key:'device',title:'Device'}]">
+<span class="widget_filters_info" ng-show="!!definition.config.filters[index.key]" ng-repeat="index in [{key:'os',title:'OS'}, {key:'device',title:'Device'},{key:'browser',title:'Browser'}]">
   <small ng-if="!!definition.config.filters[index.key]&& definition.config.filters[index.key]!=='-'">&nbsp;{{index.title}}: {{definition.config.filters[index.key]}}&nbsp;</small>
 </span>
 
