--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -375,6 +375,7 @@
 <script type="text/javascript" src="js/portal/reports/heatmaps/heatmaps.factory.js"></script>
 <script type="text/javascript" src="js/portal/reports/imageengine-analytics/imageEngineAnalytics.controller.js"></script>
 <script type="text/javascript" src="js/portal/reports/imageengine-analytics/directives/imageengineLinechartBytesSaved.directive.js"></script>
+<script type="text/javascript" src="js/portal/reports/imageengine-analytics/directives/imageengineSolidgaugePerformanceImprovement.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/controller/reportsProxyTraffic.controller.js"></script>
 <script type="text/javascript" src="js/portal/reports/controller/topReportsTraffic.controller.js"></script>
 <script type="text/javascript" src="js/portal/reports/controller/topObjects.controller.js"></script>
