Add  new Dashboard widget - 'Performance Improvement By ImageEngine'

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -451,6 +451,8 @@
 <script type="text/javascript" src="js/portal/dashboard/widgets/web-analytics/http-status-codes-ratio/widgetHTTPStatusCodesRatio.controller.js"></script>
 <script type="text/javascript" src="js/portal/dashboard/widgets/web-analytics/imageengine-linechart-bytes-saved/widgetImageEngineLineChartByteSaved.config.js"></script>
 <script type="text/javascript" src="js/portal/dashboard/widgets/web-analytics/imageengine-linechart-bytes-saved/widgetImageEngineLineChartByteSaved.controller.js"></script>
+<script type="text/javascript" src="js/portal/dashboard/widgets/web-analytics/imageengine-solidgauge-performance-improvement/imageengineSolidgaugePerformanceImprovement.config.js"></script>
+<script type="text/javascript" src="js/portal/dashboard/widgets/web-analytics/imageengine-solidgauge-performance-improvement/imageengineSolidgaugePerformanceImprovement.controller.js"></script>
 <script type="text/javascript" src="widgets/adf-widget-analytics-proxy-traffic/dist/adf-widget-analytics-proxy-traffic.js"></script>
 
 <!-- //Web Analytic -->
