Add directive filterHoursPeriods and use it in ImageEngine Analytics graph

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -343,6 +343,7 @@
 <script type="text/javascript" src="js/portal/reports/service/pieChartHelper.factory.js"></script>
 <script type="text/javascript" src="js/portal/reports/service/eventsSerieDataService.factory.js"></script>
 <script type="text/javascript" src="js/portal/reports/service/reports-filter.service.js"></script>
+<script type="text/javascript" src="js/portal/reports/filter/filterHoursPeriods.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/filter/timePeriods.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/filter/filterTopObjects.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/filter/mobileTrafficFilters.directive.js"></script>
