--- a/code/dev/parts/reports/imageengine-analytics.tpl.html
+++ b/code/dev/parts/reports/imageengine-analytics.tpl.html
@@ -43,7 +43,7 @@
           </div>
           <hr>
           <div class="row ">
-            <div class="clearfix_ col-md-12" filter-time-periods ng-disabled="_loading ||!domain" is-loading="_loading" fl-os="os" fl-country="country"
+            <div class="clearfix_ col-md-12" filter-hours-periods ng-disabled="_loading ||!domain" is-loading="_loading" fl-os="os" fl-country="country"
               fl-device="device" fl-browser="browser" ng-filters="filters" on-filter="reload()" filters-sets="filters"></div>
           </div>
 
