--- a/code/dev/parts/reports/imageengine-analytics/imageengine-linechart-bytes-saved.tpl.html
+++ b/code/dev/parts/reports/imageengine-analytics/imageengine-linechart-bytes-saved.tpl.html
@@ -1,5 +1,5 @@
 <h3 class="reports_charts_title">{{ heading }}</h3>
-<div class="clearfix" filter-time-periods ng-disabled="!ngDomain" is-loading="_loading" fl-os="flOs" fl-country="flCountry"
+<div class="clearfix" filter-hours-periods ng-disabled="!ngDomain" is-loading="_loading" fl-os="flOs" fl-country="flCountry"
   fl-device="flDevice" fl-browser="flBrowser" ng-filters="filters" on-filter="reload()"></div>
 <div class="auto-scroll">
   <div style="min-width: 500px; min-height: 350px" line-chart ng-data="traffic" ng-chart-options="chartOptions"></div>
