Enable automatic loading of graph on FBT Reports page

--- a/code/dev/parts/reports/fbt.html
+++ b/code/dev/parts/reports/fbt.html
@@ -35,7 +35,7 @@
                    fl-country="country"
                    fl-browser="browser"
                    ng-domain="domain"
-                   is-auto-reload="false"></div>
+                   is-auto-reload="true"></div>
             </div>
           </div>
 
@@ -48,7 +48,7 @@
                    fl-country="country24"
                    fl-browser="browser24"
                    ng-domain="domain"
-                   is-auto-reload="false"></div>
+                   is-auto-reload="true"></div>
             </div>
           </div>
 
@@ -59,7 +59,7 @@
               <div fbt-heatmap-chart
                    fl-country="countries"
                    ng-domain="domain"
-                   is-auto-reload="false"></div>
+                   is-auto-reload="true"></div>
             </div>
           </div>
 
