--- a/code/dev/parts/reports/charts/fbt-average.html
+++ b/code/dev/parts/reports/charts/fbt-average.html
@@ -5,7 +5,7 @@
     <form class="form-inline">
       <div class="form-group">
         <select class="form-control fixed"
-                ng-model="delay">
+                ng-model="filters.count_last_day">
           <option value="1">Last 1 Day</option>
           <option value="7">Last 7 Days</option>
           <option value="30">Last 30 Days</option>
@@ -15,7 +15,7 @@
       <div class="form-group">
         <select class="form-control fixed"
                 ng-options="key as item for (key, item) in flCountry"
-                ng-model="country">
+                ng-model="filters.country">
           <option value="">All Countries</option>
         </select>
       </div>
@@ -23,14 +23,14 @@
       <div class="form-group">
         <select class="form-control fixed"
                 ng-options="item for item in flOs"
-                ng-model="os">
+                ng-model="filters.os">
           <option value="">All OS</option>
         </select>
       </div>
 
       <div class="form-group">
         <select class="form-control fixed"
-                ng-model="device"
+                ng-model="filters.device"
                 ng-options="item for item in flDevice">
           <option value="">All Devices</option>
         </select>
@@ -38,7 +38,7 @@
 
       <div class="form-group">
         <select class="form-control fixed"
-                ng-model="browser"
+                ng-model="filters.browser"
                 ng-options="item for item in flBrowser">
           <option value="">All Browsers</option>
         </select>
