--- a/code/dev/parts/shared/error-messages.html
+++ b/code/dev/parts/shared/error-messages.html
@@ -38,3 +38,5 @@
 <div ng-message="waf-location-name" class="alert-text alert-text--waf-location-name">Incorrect WAF Location name format</div>
 <!-- message for validate-uniqueness-in-array  -->
 <div ng-message="uniqueness-in-array" class="alert-text alert-text--uniqueness-in-array">The WAF Location name must be uniqueness </div>
+<!-- message for validate-cidr-format -->
+<div ng-message="cidr-format" class="alert-text alert-text--cidr-format">The CIDR not correct</div>
