--- a/code/dev/parts/domains/edit.html
+++ b/code/dev/parts/domains/edit.html
@@ -576,12 +576,12 @@
               <!--  "Access Control Lis(ACL)" -->
               <uib-tab-heading>ACL</uib-tab-heading>
               <div class="form-group form-inline">
-                <label for="enableWafRules" class="col-sm-3 control-label">Access Control List</label>
+                <label for="enableACLRules" class="col-sm-3 control-label">Access Control List</label>
                 <div class="col-md-9">
-                  <toggle-switch id="enable_waf_rules" name="enableWafRules" is-disabled="_loading" ng-model="model.rev_component_bp.acl.enabled"
+                  <toggle-switch id="enable_acl_rules" name="enableACLRules" is-disabled="_loading" ng-model="model.rev_component_bp.acl.enabled"
                     on-label="On" off-label="Off">
                   </toggle-switch>
-                  <label for="enableWafRules" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="This switch controls whether ACL functionality is enabled for the domain">
+                  <label for="enableACLRules" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="This switch controls whether ACL functionality is enabled for the domain">
                                 <i class="fa fa-question-circle"></i>
                               </label>
                 </div>
