Add new validation directive for Domain ACL Tab

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -183,6 +183,8 @@
 <script type="text/javascript" src="js/portal/shared/filter-generator/filter-generator.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/filter-generator/filter-generator.service.js"></script>
 <script type="text/javascript" src="js/portal/shared/search/search.directive.js"></script>
+<script type="text/javascript" src="js/portal/shared/validators/validate-acl-rule-header-name.directive.js"></script>
+<script type="text/javascript" src="js/portal/shared/validators/validate-acl-rule-header-name.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/validators/validate-cache-bypass-locations.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/validators/validate-caching-rule-header-name.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/validators/validate-caching-rule-header-value.directive.js"></script>
