Update delete ACL condition

--- a/code/dev/parts/domains/domain-acl-rules/domain-acl-rules-item.tpl.html
+++ b/code/dev/parts/domains/domain-acl-rules/domain-acl-rules-item.tpl.html
@@ -2,7 +2,7 @@
   <div class="panel-heading">
     <div class="pull-right panel-button-right">
       <!-- button Remove the ACL Condition-->
-      <a href="" ng-click="$ctrl.onRemoveACLRule($event, $index)" popover-trigger="mouseenter" popover-placement="left" uib-popover="Remove the ACL Condition">
+      <a href="" ng-click="$ctrl.onCallRemove($event, $index)" popover-trigger="mouseenter" popover-placement="left" uib-popover="Remove the ACL Condition">
       <i class="glyphicon glyphicon-remove"></i>
        </a>
     </div>
