Fix error message for CIDR

--- a/code/dev/parts/shared/error-messages.html
+++ b/code/dev/parts/shared/error-messages.html
@@ -39,6 +39,7 @@
 <!-- message for validate-uniqueness-in-array  -->
 <div ng-message="uniqueness-in-array" class="alert-text alert-text--uniqueness-in-array">The WAF Location name must be uniqueness </div>
 <!-- message for validate-cidr-format -->
+<div ng-message="cidr-format" class="alert-text alert-text--cidr-format">The CIDR not correct</div>
 <!-- message for  validate-acl-rule-header-name  -->
 <div ng-message="acl-rule-header-name" class="alert-text alert-text--acl-rule-header-name">Incorrect header-name</div>
 <!-- message for  validate-acl-rule-header-value  -->
