--- a/code/dev/parts/shared/error-messages.html
+++ b/code/dev/parts/shared/error-messages.html
@@ -39,7 +39,7 @@
 <!-- message for validate-uniqueness-in-array  -->
 <div ng-message="uniqueness-in-array" class="alert-text alert-text--uniqueness-in-array">The WAF Location name must be uniqueness </div>
 <!-- message for validate-cidr-format -->
-<div ng-message="cidr-format" class="alert-text alert-text--cidr-format">The CIDR not correct</div>
+<div ng-message="cidr-format" class="alert-text alert-text--cidr-format">Please use correct CIDR format (for example, 8.8.8.8/32 or 4.4.4.0/24)</div>
 <!-- message for  validate-acl-rule-header-name  -->
 <div ng-message="acl-rule-header-name" class="alert-text alert-text--acl-rule-header-name">Incorrect header-name</div>
 <!-- message for  validate-acl-rule-header-value  -->
