--- a/code/dev/parts/domains/domain-acl-rules/domain-acl-rules-item.tpl.html
+++ b/code/dev/parts/domains/domain-acl-rules/domain-acl-rules-item.tpl.html
@@ -49,8 +49,8 @@
                   </label>
       </div>
       <div class="panel-body">
-        <div class="col-md-9">
-          <div class="form-group col-sm-12">
+        <div class="col-md-12 row">
+          <div class="form-group col-md-12">
             <label class=" col-md-3 control-label"> Name</label>
             <div class="col-md-9" ng-class="{'has-error': aclRuleForm.headerName.$invalid}">
               <input type="text" ng-animate-disabled validate-acl-rule-header-name name="headerName" class="form-control inline-block"
