--- a/code/dev/parts/dns_zone_records/new.html
+++ b/code/dev/parts/dns_zone_records/new.html
@@ -2,7 +2,7 @@
   <div class="col-sm-12">
     <h2 class="pull-left page-title">
       <img class="ns1-logo--title" ng-src="images/ns1/white-pb-ns1.svg"></img>
-      Add New Record
+      Add New Record <span ng-if="zone_name"> To Domain <strong>{{zone_name}}</strong></span>
     </h2>
   </div>
 </div>
