Update Hits Heatmap - show regions data

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -79,6 +79,7 @@
 <script type="text/javascript" src="bower_components/highcharts/highstock.src.js"></script>
 <!-- <script type="text/javascript" src="bower_components/highcharts/highcharts.js"></script> -->
 <script type="text/javascript" src="bower_components/highcharts/modules/map.js"></script>
+<script type="text/javascript" src="bower_components/highcharts/modules/drilldown.js"></script>
 <script type="text/javascript" src="bower_components/highcharts/highcharts-3d.js"></script>
 <script type="text/javascript" src="bower_components/highcharts/highcharts-more.js"></script>
 <script type="text/javascript" src="bower_components/highcharts/modules/exporting.js"></script>
@@ -379,6 +380,7 @@
 <script type="text/javascript" src="js/portal/reports/top/slowestFBT.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/top/slowestDownload.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/heatmaps/heatmaps.factory.js"></script>
+<script type="text/javascript" src="js/portal/reports/heatmaps/heatmapsWorldDrill.factory.js"></script>
 <script type="text/javascript" src="js/portal/reports/imageengine-analytics/imageEngineAnalytics.controller.js"></script>
 <script type="text/javascript" src="js/portal/reports/imageengine-analytics/directives/imageengineLinechartBytesSaved.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/imageengine-analytics/directives/imageengineSolidgaugePerformanceImprovement.directive.js"></script>
