--- a/code/dev/parts/signup/form-short-and-full-signup.tpl.html
+++ b/code/dev/parts/signup/form-short-and-full-signup.tpl.html
@@ -99,7 +99,7 @@
           <!-- Selected Billing Plan -->
           <div class="col-sm-12" ng-if="currentPB.chargify_handle == $ctrl.model.billing_plan">
             <p>You are about to subscribe to billing plan <strong>"{{currentPB.name}}"</strong> for <strong>${{currentPB.monthly_fee}}/mon. </strong></p>
-            <p>it {{currentPB.description | lowcase}}. </p>
+            <p>It {{currentPB.description | lowcase}}. </p>
           </div>
         </div>
       </div>
