Fix label attribute on Signup form

--- a/code/dev/parts/signup/form-short-and-full-signup.tpl.html
+++ b/code/dev/parts/signup/form-short-and-full-signup.tpl.html
@@ -177,7 +177,7 @@
               <div class="col-sm-9">
                 <input type="text" class="form-control inline-block" id="promoCode" name="promoCode" placeholder="Enter Promo Code" ng-maxlength="15"
                   ng-model="$ctrl.model.promocode" ng-pattern="NO_SPECIAL_CHARS" ng-disabled="$ctrl._loading">
-                <label for="lastName" class="text-info" popover-trigger="mouseenter" uib-popover="Promo Code">
+                <label for="promoCode" class="text-info" popover-trigger="mouseenter" uib-popover="Promo Code">
                 <i class="fa fa-question-circle"></i>
                 </label>
                 <div class="error-messages" ng-messages="newUser.promoCode.$error" role="alert" ng-messages-multiple>
