Update the 'Top 20 Rule IDs' pie chart

--- a/code/dev/parts/waf-analytics/directives/waf-tops-pie-charts.tpl.html
+++ b/code/dev/parts/waf-analytics/directives/waf-tops-pie-charts.tpl.html
@@ -8,7 +8,7 @@
 <div class="col-md-4">
   <h3 class="graph-title">Top 20 Rule IDs</h3>
   <div>
-    <div _style="min-width: 480px; min-height: 350px" pie-chart ng-data="topRulesIds"></div>
+    <div _style="min-width: 480px; min-height: 350px" pie-chart ng-data="topRulesIds" ng-chart-options="chartOptions"></div>
   </div>
 </div>
 <div class="col-md-4">
