Hide 'Set Default ImageEngine Configuration' switch

--- a/code/dev/parts/domains/domain-image-engine/domain-image-engine.tpl.html
+++ b/code/dev/parts/domains/domain-image-engine/domain-image-engine.tpl.html
@@ -62,7 +62,7 @@
       </div>
     </div>
     <!-- Set Default ImageEngine Configuration -->
-    <div class="form-group">
+    <div class="form-group" ng-if="model.image_engine.custom_configuration_present">
       <label for="refreshImageEngineConfiguration" class="col-sm-3 control-label">
         Set Default ImageEngine Configuration
       </label>
