Add autofocus directive for new DNS zone and new DNS record

--- a/code/dev/parts/dns_zone_records/new.html
+++ b/code/dev/parts/dns_zone_records/new.html
@@ -29,7 +29,7 @@
               <div class="col-sm-10">
                 <!-- NOTE: all validation rules implement to hidden fild-->
                 <input type="hidden" id="subdomainFull" name="subdomainFull" validate-dns-record-domain-name-regular-or-wildcard-domains ng-model="newDomainName" ng-maxlength="225">
-                <input type="text" id="subdomain" name="subdomain" autofocus class="form-control" placeholder="my.subdomain" ng-model="model.idomain" ng-change="newDomainName = (model.idomain.length>0)? model.idomain+'.'+zone_name:zone_name">
+                <input type="text" id="subdomain" name="subdomain" autofocus focus-me="!_loading" class="form-control" placeholder="my.subdomain" ng-model="model.idomain" ng-change="newDomainName = (model.idomain.length>0)? model.idomain+'.'+zone_name:zone_name">
                 <label class="add-on" ng-if="zone_name"><span ng-show="model.idomain.length>0">.</span>{{zone_name}}</label>
                 <label for="subdomain" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Enter a subdomain within the {{zone_name}} zone.  You may enter &#39;*&#39; as the first component of the subdomain to create a wildcard record.  For example, &#39;*.{{zone_name}}&#39; will match &#39;foo.{{zone_name}}&#39;, &#39;bar.{{zone_name}}&#39;, &#39;foo.bar.{{zone_name}}&#39;, and so on.  You may also leave the subdomain blank to create a record for {{zone_name}}.">
                   <i class="fa fa-question-circle"></i>
